--- a/web/html/res/custom/css/layouts/main.css
+++ b/web/html/res/custom/css/layouts/main.css
@@ -163,7 +163,8 @@ a {
 }
 
 .feed-content-body {
-    border-bottom: 1px solid #aaa;
+    margin-top: 3px;
+    border-bottom: 1px solid #bbb;
 
 }
 
