Delete working + have to login to access the channels

--- a/api/app/views/index.scala.html
+++ b/api/app/views/index.scala.html
@@ -24,7 +24,7 @@
                         <li>@item.title</li>
                     }
                 </ul></td>
-                <td><button>Delete</button></td>
+                <td><a href="@routes.Channels.delete(channel.id)">Delete</a></td>
             </tr>
             }
         </tbody>
