--- a/api/app/views/index.scala.html
+++ b/api/app/views/index.scala.html
@@ -1,36 +1,21 @@
-@(channels: List[Channel], myForm: Form[Channel])
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>My AngularJS App</title>
+  <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+  <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")">
+  <script data-main="@routes.Assets.versioned("javascripts/main.js")" src="@routes.Assets.versioned("lib/requirejs/require.js")"></script>
+</head>
+<body>
+  <ul class="menu">
+    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/view2">view2</a></li>
+  </ul>
 
-@main("Welcome to Play") {
-    <table>
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>Title</th>
-                <th>Link</th>
-                <th>Description</th>
-                <th>Items</th>
-                <th>Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            @for(channel <- channels) {
-            <tr>
-                <td>@channel.id</td>
-                <td>@channel.title</td>
-                <td>@channel.link</td>
-                <td>@channel.description</td>
-                <td><ul>
-                    @for(item <- channel.items) {
-                        <li>@item.title</li>
-                    }
-                </ul></td>
-                <td><a href="@routes.Channels.delete(channel.id)">Delete</a></td>
-            </tr>
-            }
-        </tbody>
-    </table>
+  <div ng-view></div>
 
-    @helper.form(action = routes.Channels.create()) {
-        @helper.inputText(myForm("link"))
-    }
-}
+  <div>Angular seed app: v<span app-version></span></div>
+
+</body>
+</html>
