--- a/api/app/views/index.scala.html
+++ b/api/app/views/index.scala.html
@@ -17,7 +17,7 @@
 <body>
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <!--<div>Angular seed app: v<span app-version></span></div>-->
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="@routes.Assets.versioned("bower_components/angular/angular.js")"></script>
