--- a/api/public/res/custom/css/layouts/main.css
+++ b/api/public/res/custom/css/layouts/main.css
@@ -14,6 +14,10 @@ a {
 }
 
 
+.display-inline {
+    display: inline;
+}
+
 /*
  * -- HELPER STYLES --
  * Over-riding some of the .pure-button styles to make my buttons look unique
