--- a/api/app/views/index.scala.html
+++ b/api/app/views/index.scala.html
@@ -53,7 +53,7 @@
 
         <div class="pure-u-3-4">
           <h5 class="feed-name">{{ channel.title }}</h5> 
-          <span class="pure-badge-info fa fa-close" ng-click="deleteChannel(channel)"></span>
+          <a class="fa fa-close" ng-click="deleteChannel(channel)"></a>
           <span class="feed-item-unread-count pure-badge-info">{{ channel.unread }}</span>
         </div>
       </div>       
