--- a/api/app/views/index.scala.html
+++ b/api/app/views/index.scala.html
@@ -12,10 +12,13 @@
   <link rel="stylesheet" href="@routes.Assets.versioned("ressources/css/main.css")">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-cookies.js"></script>
+
   <script src="@routes.Assets.versioned("ressources/components/bower_components/bootstrap/js/bootstrap.min.js")"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
   <script src="@routes.Assets.versioned("javascripts/index.js")"></script>
 </head>
+
 <body ng-app="rssjava" ng-controller="MainController">
   <div id="layout" class="content pure-g">
     <div id="nav" class="pure-u">
@@ -36,15 +39,9 @@
           </div>
           <div class="pure-menu pure-menu-open">
           <ul>
-            <li class="pure-menu-heading">Folders</li>
-            <li><a href="#">Informatique <span class="feed-count">(2)</span></a></li>
-            <li><a href="#">Boulard</a></li>
-            <li><a href="#">La Denise</a></li>
-            <li><a href="#">Others</a></li>
-            <li><a href="#">All</a></li>
             <li class="pure-menu-heading">Account</li>
             <li><a href="#" title="Manage account">Manage</a></li>
-            <li><a href="#" title="Bye bye !">Log Out</a></li>
+            <li><a href="#" title="Bye bye !" ng-click="logout()">Log Out</a></li>
           </ul>
         </div>
       </div>
