--- a/api/app/views/login.scala.html
+++ b/api/app/views/login.scala.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="@routes.Assets.versioned("ressources/css/login.css")">
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-cookies.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="@routes.Assets.versioned("javascripts/login.js")"></script>
 </head>
