--- a/api/app/views/index.scala.html
+++ b/api/app/views/index.scala.html
@@ -7,37 +7,46 @@
   
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
   <link rel="stylesheet" href="@routes.Assets.versioned("ressources/components/pure-extras/css/pure-extras.css")">
-  <link rel="stylesheet" href="@routes.Assets.versioned("ressources/components/bower_components/bootstrap/css/bootstrap.min.css")">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="@routes.Assets.versioned("ressources/css/main.css")">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-cookies.js"></script>
 
   <script src="@routes.Assets.versioned("ressources/components/bower_components/bootstrap/js/bootstrap.min.js")"></script>
+  <link rel="stylesheet" href="@routes.Assets.versioned("ressources/css/main.css")">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+  <script src="@routes.Assets.versioned("ressources/components/angular-flash/dist/angular-flash.js")"></script>
   <script src="@routes.Assets.versioned("javascripts/index.js")"></script>
 </head>
 
+
+
 <body ng-app="rssjava" ng-controller="MainController">
+
+  <div flash-alert active-class="in" class="alert-flash fade center-text" duration="50000">
+    <span class="alert alert-message">{{flash.message}}</span>
+    <button type="button" class="close-button" ng-click="hide()">&times;</button>
+  </div>
+
   <div id="layout" class="content pure-g">
     <div id="nav" class="pure-u">
       <a href="#" class="nav-menu-button">Menu</a>
-        <div class="nav-inner">
+      <div class="nav-inner">
         <div class="pure-g" id="menu-buttons">
-            <div class="pure-u-1-2">
-              <button id="add-new-channel-button" class="pure-button" data-toggle="modal" data-target="#myModal">
-                <i class="fa fa-lg fa-plus">
-                </i>
-              </button>
-            </div>
-            <div class="pure-u-1-2">
-              <button id="actualise-channels" class="pure-button" ng-click="refresh()" >
-                <i class="fa fa-lg fa-refresh"></i>
-              </button>
-            </div>
+          <div class="pure-u-1-2">
+            <button id="add-new-channel-button" class="pure-button" data-toggle="modal" data-target="#myModal">
+              <i class="fa fa-lg fa-plus">
+              </i>
+            </button>
           </div>
-          <div class="pure-menu pure-menu-open">
+          <div class="pure-u-1-2">
+            <button id="actualise-channels" class="pure-button" ng-click="refresh()" >
+              <i class="fa fa-lg fa-refresh"></i>
+            </button>
+          </div>
+        </div>
+        <div class="pure-menu pure-menu-open">
           <ul>
             <li class="pure-menu-heading">Account</li>
             <li><a href="#" title="Manage account">Manage</a></li>
@@ -52,70 +61,70 @@
     <div id="list" class="pure-u-1">
       <div class="feed-item pure-g" ng-repeat="channel in channels" id="{{ 'c_' + channel.id }}" ng-class="{'feed-item-unread': channel.unread > 0}" ng-click="getItems(channel.id)" selectable-channel>
         <div class="pure-u-1-5">
-           <img class="feed-avatar" src="{{channel.imageUrl}}" alt="{{ channel.title }}">
-        </div>
+         <img class="feed-avatar" src="{{channel.imageUrl}}" alt="{{ channel.title }}">
+       </div>
 
-        <div class="pure-u-3-5 channel-title">
-          <a class="fa fa-close" ng-click="deleteChannel(channel)"></a>
-          <h5 class="feed-name">{{ channel.title }}</h5> 
-        </div>
-        <div class="pure-u-1-5">
-          <span class="feed-item-unread-count pure-badge-info">{{ channel.unread }}</span>
-        </div>
-      </div>       
-    </div>
+       <div class="pure-u-3-5 channel-title">
+        <a class="fa fa-close" ng-click="deleteChannel(channel)"></a>
+        <h5 class="feed-name">{{ channel.title }}</h5> 
+      </div>
+      <div class="pure-u-1-5">
+        <span class="feed-item-unread-count pure-badge-info">{{ channel.unread }}</span>
+      </div>
+    </div>       
+  </div>
 
-    <div id="main" class="pure-u-1">
-      <div class="feed-content" ng-repeat="item in items" ng:class="{false:'feed-item-unread', true:''}[item.read]">
-        <div class="feed-content-header pure-g">
-          <div class="pure-u-1">
-            <h3 class="feed-content-title" ng-click="setItemRead(item, true)" slide-toggle="{{ '#e_' + item.id }}">{{ item.title }}</h3>
-            <p class="feed-content-subtitle">
-              <a href="{{item.link}}" alt="follow"><i class="fa fa-link"></i></a>
-              <i class="fa fa-share-alt"></i>
-              <i id="icon-unread" ng-click="setItemRead(item, false)" ng:class="{false:'hidden', true:''}[item.read]" class="fa fa-eye-slash"></i>
-              <span class="small info-text" id="info-text-unread">set as unread</span>
-            </p>
-          </div>
+  <div id="main" class="pure-u-1">
+    <div class="feed-content" ng-repeat="item in items" ng:class="{false:'feed-item-unread', true:''}[item.read]">
+      <div class="feed-content-header pure-g">
+        <div class="pure-u-1">
+          <h3 class="feed-content-title" ng-click="setItemRead(item, true)" slide-toggle="{{ '#e_' + item.id }}">{{ item.title }}</h3>
+          <p class="feed-content-subtitle">
+            <a href="{{item.link}}" alt="follow"><i class="fa fa-link"></i></a>
+            <i class="fa fa-share-alt"></i>
+            <i id="icon-unread" ng-click="setItemRead(item, false)" ng:class="{false:'hidden', true:''}[item.read]" class="fa fa-eye-slash"></i>
+            <span class="small info-text" id="info-text-unread">set as unread</span>
+          </p>
         </div>
-        <div id="{{ 'e_' + item.id }}" class="item-content-body" slideable>
-            <p ng-bind-html="loadHtml(item.description)">{{ item.description }}</p>
-        </div>
+      </div>
+      <div id="{{ 'e_' + item.id }}" class="item-content-body" slideable>
+        <p ng-bind-html="loadHtml(item.description)">{{ item.description }}</p>
       </div>
     </div>
   </div>
-        <!-- Modal Add new channel -->
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button class="pure-button button-no-div" data-dismiss="modal">
-            <i class="fa fa-close"></i>
-          </button>
-          <h4 class="display-inline" id="myModalLabel">Add a new channel</h4>
-        </div>
-        <form novalidate class="pure-form new-channel">
-          <div class="modal-body">
-            <div class="pure-g">
-              <div class="pure-u">
-                <div class="pure-u-1-3"></div>
-                <div class="pure-u-1-3">
-                  <input type="text" placeholder="Channel Address" ng-model="channel.link">
-                </div>
-                <div class="pure-u-1-3"></div>
-              </div>
-            </div>
+</div>
+<!-- Modal Add new channel -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button class="pure-button button-no-div" data-dismiss="modal">
+          <i class="fa fa-close"></i>
+        </button>
+        <h4 class="display-inline" id="myModalLabel">Add a new channel</h4>
+      </div>
+      <form novalidate class="pure-form new-channel">
+        <div class="modal-body">
+          <div class="pure-g">
             <div class="pure-u">
-              <div id="ErrorNew" class="pure-u-1"></div>
+              <div class="pure-u-1-3"></div>
+              <div class="pure-u-1-3">
+                <input type="text" placeholder="Channel Address" ng-model="channel.link">
+              </div>
+              <div class="pure-u-1-3"></div>
             </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="pure-button pure-button-alert" data-dismiss="modal">Cancel</button>
-            <button type="button" class="pure-button pure-button-primary" id="button-create" ng-click="createChannel()" data-dismiss="modal">Create new channel</button>
+          <div class="pure-u">
+            <div id="ErrorNew" class="pure-u-1"></div>
           </div>
-        </form>
-      </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="pure-button pure-button-alert" data-dismiss="modal">Cancel</button>
+          <button type="button" class="pure-button pure-button-primary" id="button-create" ng-click="createChannel()" data-dismiss="modal">Create new channel</button>
+        </div>
+      </form>
     </div>
   </div>
+</div>
 </body>
 </html>
