--- a/api/app/views/login.scala.html
+++ b/api/app/views/login.scala.html
@@ -6,12 +6,20 @@
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("ressources/images/favicon.png")">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="@routes.Assets.versioned("ressources/css/login.css")">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular-cookies.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="@routes.Assets.versioned("ressources/components/angular-flash/dist/angular-flash.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/login.js")"></script>
 </head>
 <body ng-app="rssjava" ng-controller="LoginController">
+  <div flash-alert active-class="in" class="alert-flash fade center-text" duration="50000">
+    <span class="alert alert-message">{{flash.message}}</span>
+    <button type="button" class="close-button" ng-click="hide()">&times;</button>
+  </div>
   <div class="pure-g">
     <div class="pure-u-1-3 login-title">
       <h1>RSS AGGREGATOR</h1>
