--- a/api/public/assets/ressources/css/login.css
+++ b/api/public/assets/ressources/css/login.css
@@ -21,3 +21,28 @@ form .pure-controls button {
 .login-title IMG {
 	height: 145px;
 }
+
+
+.alert-flash {
+    position:relative; 
+    z-index: 100;
+}
+
+.center-text {
+    text-align: center;
+}
+
+.close-button {
+    -webkit-appearance: none;
+    padding: 0;
+    cursor: pointer;
+    background: 0 0;
+    border: 0;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+}
