--- a/api/public/assets/ressources/css/main.css
+++ b/api/public/assets/ressources/css/main.css
@@ -380,3 +380,29 @@ H3.feed-content-title {
     }
 }
 
+
+
+.alert-flash {
+    position:relative; 
+    z-index: 100;
+}
+
+.center-text {
+    text-align: center;
+}
+
+.close-button {
+    -webkit-appearance: none;
+    padding: 0;
+    cursor: pointer;
+    background: 0 0;
+    border: 0;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+}
+
